[package]
name = "replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
spl-token = { workspace = true }
solana-logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
chrono = { workspace = true }
common = {path = "../../common"}
plugin = {path = "../../plugin"}

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "replayer"
path = "src/main.rs"